--- a/lib/css/layout.css
+++ b/lib/css/layout.css
@@ -7,27 +7,33 @@
 .mo-hidden { display: block; }
 .pc-hidden { display: none; }
 
+/******** layout ********/
+.default-wrap { max-width: 1234px; width: 100%; height: 100%; padding-left: 20px; padding-right: 20px; margin-left: auto; margin-right: auto; }
+
 /******** font ********/
-.font120 { font-size: 120px !important; font-weight: bold; }
-.font64 { font-size: 64px !important; font-weight: bold; }
-.font40 { font-size: 40px !important; font-weight: bold; }
-.font32 { font-size: 32px !important; font-weight: bold; }
-.font24 { font-size: 24px !important; font-weight: normal; }
-.font18 { font-size: 18px !important; font-weight: normal; }
-.font16 { font-size: 16px !important; font-weight: normal; }
-.font14 { font-size: 14px !important; font-weight: normal; }
-.font12 { font-size: 12px !important; font-weight: normal; }
+.font120 { font-size: 120px !important; }
+.font64 { font-size: 64px !important; }
+.font40 { font-size: 40px !important; }
+.font32 { font-size: 32px !important; }
+.font24 { font-size: 24px !important; }
+.font18 { font-size: 18px !important; }
+.font16 { font-size: 16px !important; }
+.font14 { font-size: 14px !important; }
+.font12 { font-size: 12px !important; }
 
 .thin { font-weight:100 !important; }
 .light { font-weight:300 !important; }
 .normal { font-weight:400 !important; }
+.medium { font-weight:500 !important; }
 .bold { font-weight:700 !important; }
 .underline { text-decoration:underline; }
+.bowlbyone { font-family: 'Bowlby One'; letter-spacing: 0.02em; }
 
 /******** color ********/
 .color-000000 { color:#000000 !important; }
 .color-FFFFFF { color:#FFFFFF !important; }
 .color-E50015 { color: #E50015 !important; }
+.color-FF001E { color: #FF001E !important; }
 
 /******** background ********/
 .bg-FFFFFF { background-color: #FFFFFF !important; }
@@ -43,6 +49,25 @@ hr { height: 1px; }
 hr.title { height: 2px; }
 
 /******** btn ********/
+
+
+/******* footerWrap ********/
+#footerWrap .footer-inner { max-width: 476px; margin: 0 auto; }
+#footerWrap .footer-logo { width: 156px; height: 112px; margin: 0 auto; }
+#footerWrap .footer-logo > img { width: 100%; }
+#footerWrap .footer-inner address { font-style: normal; font-size: 18px; }
+#footerWrap .footer-inner address > span { display: block; }
+#footerWrap .footer-inner address .number { margin: 24px 0;  }
+#footerWrap .footer-inner address .number a { margin-right: 32px; }
+#footerWrap .footer-inner .btn-wrap { overflow: hidden; max-width: 416px; width: 100%; margin: 0 auto; }
+#footerWrap .footer-inner .btn-wrap > a { display: block; float: left; width: 196px; height: 50px; line-height: 50px; background-color: #FF001E; color: #FFF; text-align: center; margin-right: 24px; }
+#footerWrap .footer-inner .btn-wrap > a:last-child { margin-right: 0; }
+#footerWrap .footer-inner .sns-wrap { overflow: hidden; max-width: 118px; width: 100%; margin: 0 auto; margin-top: 24px; }
+#footerWrap .footer-inner .sns-wrap > li { width: 47px; height: 47px; float: left; margin-right: 24px; }
+#footerWrap .footer-inner .sns-wrap > li:last-child { margin-right: 0; }
+#footerWrap .footer-inner .sns-wrap > li > a > img { width: 100%; }
+#footerWrap .copyright { width: 100%; height: 60px; line-height: 60px; background-color: #FF001E; }
+#footerWrap .copyright p { color: #FFF; font-size: 18px; font-weight: bold; text-align: center; }
 
 @media (max-width: 1280px) { 
 
@@ -66,7 +91,14 @@ hr.title { height: 2px; }
 }
 
 @media (max-width: 768px) {
-
+    /******* footerWrap ********/
+    #footerWrap .footer-inner { max-width: 360px; padding: 0 20px; }
+    #footerWrap .footer-logo { width: 100px; height: 73px; }
+    #footerWrap .footer-inner address { font-size: 14px; }
+    #footerWrap .footer-inner .btn-wrap { max-width: 280px; }
+    #footerWrap .footer-inner .btn-wrap > a { width: 135px; margin-right: 10px; font-size: 12px; }
+    #footerWrap .copyright { height: 45px; line-height: 45px; }
+    #footerWrap .copyright p { font-size: 12px; }
 }
 
 @media (max-width: 375px) {
