--- a/lib/css/content.css
+++ b/lib/css/content.css
@@ -5,22 +5,24 @@
 #content1-1 .section-1 .full-page { position: relative; width: 100%; height: 100vh; }
 #content1-1 .section-1 .full-page > div { position: relative; width: 50%; height: 100%; float: left; }
 #content1-1 .section-1 .full-page.global-network > div { float: right; }
-#content1-1 .section-1 .inner-wrap .desc-wrap { position: absolute; top: 50%; left: 80px; transform: translateY(-50%); }
-#content1-1 .section-1 .inner-wrap .desc-wrap > h2 { margin-bottom: 40px; }
+#content1-1 .section-1 .inner-wrap .desc-wrap { position: absolute; top: 50%; left: 80px; transform: translateY(-50%); padding: 0 24px; }
+#content1-1 .section-1 .inner-wrap .desc-wrap > h2 { margin-bottom: 24px; }
 #content1-1 .section-1 .brand-story .has-bg { background-image: url(../../image/page/bg_brand_story01.jpg); }
 #content1-1 .section-1 .global-network .has-bg { background-image: url(../../image/page/bg_brand_story02.jpg); }
 
-#content1-1 .section-2 .our-mission .perpen-area { float: left; width: 400px; height: 677px; margin-right: 34px; background-image: url(../../image/page/bg_customer.jpg); background-repeat: no-repeat; background-position: bottom 72px center; background-size: auto 284px; }
-#content1-1 .section-2 .our-mission .horiz-area { float: left; width: 760px; }
-#content1-1 .section-2 .our-mission .horiz-area > div { height: 322px; background-color: #FAF8F6; background-image: url(../../image/page/bg_partner.jpg); background-repeat: no-repeat; background-size: auto 233px; background-position: center right 102px ; }
+#content1-1 .section-2 .our-mission .perpen-area { float: left; width: calc(33% - 34px); height: 677px; margin-right: 34px; background-image: url(../../image/page/bg_customer.jpg); background-repeat: no-repeat; background-position: bottom 60px center; background-size: auto 284px; }
+#content1-1 .section-2 .our-mission .horiz-area { float: left; width: 67%; }
+#content1-1 .section-2 .our-mission .horiz-area > div { height: 322px; background-color: #FAF8F6; background-image: url(../../image/page/bg_partner.jpg); background-repeat: no-repeat; background-size: auto 233px; background-position: center right 102px ; padding-right: 280px; }
 #content1-1 .section-2 .our-mission .horiz-area > div:last-child { margin-top: 34px; background-image: url(../../image/page/bg_staff.jpg); background-position: center right 94px; }
 #content1-1 .section-2 .our-mission .inner { padding: 52px; height: 100%; }
 
-#content1-1 .section-3 ul li { position: relative; width: 100%; height: 338px; background-repeat: no-repeat; background-position: center; background-size: 100%; margin-bottom: 16px; }
-#content1-1 .section-3 ul li > span { width: 120px; height: auto; position: absolute; top: 50%; left: 243px; transform: translateY(-50%); z-index: 1; }
-#content1-1 .section-3 ul li > span > img { width: 100%; }
-#content1-1 .section-3 ul li > .desc-wrap { position: absolute; top: 50%; left: 60%; transform: translateY(-50%); z-index: 1; }
+#content1-1 .section-3 ul li { position: relative; width: 100%; height: 338px; background-repeat: no-repeat; background-position: center; background-size: cover; margin-bottom: 16px; padding-left: 100px; }
+#content1-1 .section-3 ul li > div { display: flex; justify-content: flex-end; align-items: center;}
 #content1-1 .section-3 ul li::after { content: ""; display: block; width: 100%; height: 100%; background-color: rgba(0,0,0,.4); position: absolute; top: 0; left: 0; }
+#content1-1 .section-3 ul li span { max-width: 120px; width: 100%; height: auto; position: absolute; top: 50%; left: 0; transform: translateY(-50%); z-index: 1; }
+#content1-1 .section-3 ul li span > img { width: 100%; }
+#content1-1 .section-3 ul li .desc-wrap { z-index: 1; max-width: 442px; width: 100%; }
+#content1-1 .section-3 ul li .desc-wrap p { font-size: 32px; margin-bottom: 16px; }
 #content1-1 .section-3 ul li:nth-child(1) { background-image: url(../../image/page/bg_juicy_presso.png); }
 #content1-1 .section-3 ul li:nth-child(2) { background-image: url(../../image/page/bg_gomango.jpg); }
 #content1-1 .section-3 ul li:nth-child(3) { background-image: url(../../image/page/bg_chayam.jpg); }
@@ -29,29 +31,56 @@
 #content1-1 .section-3 ul li:nth-child(4) > span,
 #content1-1 .section-3 ul li:nth-child(5) > span { width: 180px; }
 
+@keyframes fade-left {
+    0% { transform: translateX(40%); opacity: 0; }
+    100% { transform: translateX(0%); opacity: 1;}
+}
 
 @media (max-width:1280px){
     #contentsWrap { padding-top: 55px; }
 
+
+
     
 }
 @media (max-width:1024px){
+
+    /******** content1-1 ********/
+    #content1-1 .section-2 .our-mission .perpen-area { width: 100%; height: 560px; margin-right: 0; margin-bottom: 34px; background-position: bottom 47px center; }
+    #content1-1 .section-2 .our-mission .horiz-area { width: 100%; height: auto; }
+    #content1-1 .section-2 .our-mission .horiz-area > div { width: 100%;  height: 560px; background-position: bottom 66px center; padding-right: 12px; }
+    #content1-1 .section-2 .our-mission .horiz-area > div:last-child { background-position: bottom 82px center; }
+    #content1-1 .section-2 .our-mission .inner { padding: 28px 12px 0 13px; }
+
+    #content1-1 .section-3 ul li { height: 197px; }
+    #content1-1 .section-3 ul li span { max-width: 60px; }
+    #content1-1 .section-3 ul li .desc-wrap { max-width: 250px; }
+    #content1-1 .section-3 ul li .desc-wrap p { font-size: 18px; margin-bottom: 8px; }
+    #content1-1 .section-3 ul li .desc-wrap > button { width: 18px; height: 18px; }
+    #content1-1 .section-3 ul li .desc-wrap > button > img { width: 100%; }
     
 }
 @media (max-width: 991px) {
+    /******** content1-1 ********/
     #content1-1 .section-1 .full-page { height: auto; }
     #content1-1 .section-1 .full-page > div { width: 100%; height: auto; float: none; }
-    #content1-1 .section-1 .brand-story .has-bg { height: 400px; }
-    #content1-1 .section-1 .brand-story .inner-wrap { height: 435px; }
-    #content1-1 .section-1 .global-network .has-bg { height: 435px; }
-    #content1-1 .section-1 .global-network .inner-wrap { height: 435px; }
+    #content1-1 .section-1 .full-page > div.has-bg { height: 400px; }
+    #content1-1 .section-1 .brand-story .has-bg { background-image: url(../../image/page/bg_brand_story01_mo.jpg); }
     #content1-1 .section-1 .full-page.global-network > div { float: none; }
-    #content1-1 .section-1 .inner-wrap .desc-wrap { left: 50%; transform: translate(-50%,-50%); max-width: 340px; width: 100%; }
+    #content1-1 .section-1 .inner-wrap .desc-wrap { position: static; transform: none; max-width: 384px; width: 100%; text-align: center; margin: 0 auto; padding: 80px 22px; }
     #content1-1 .section-1 .inner-wrap .desc-wrap > h2 { margin-bottom: 17px; }
 
 
 }
 @media (max-width: 768px) {
+    /******** content1-1 ********/
+    #content1-1 .section-3 ul li { padding-left: 50px; }
+
+}
+@media (max-width: 560px) {
+    /******** content1-1 ********/
+    #content1-1 .section-3 ul li { padding-left: 24px; }
+    #content1-1 .section-3 ul li .desc-wrap { max-width: 138px; }
 
 }
 
