--- a/lib/css/layout.css
+++ b/lib/css/layout.css
@@ -9,8 +9,8 @@ h2 { font-size: 3.3vw; font-weight: normal; font-family: 'Bowlby One'; letter-sp
 .pc-hidden { display: none; }
 
 /******** layout ********/
-.default-wrap { max-width: 1234px; width: 100%; height: 100%; padding-left: 20px; padding-right: 20px; margin-left: auto; margin-right: auto; }
-.default-wrap.wide { max-width: 1720px; }
+.default-wrap { position: relative; max-width: 1234px; width: 100%; height: 100%; padding-left: 20px; padding-right: 20px; margin-left: auto; margin-right: auto; }
+.default-wrap.wide { position: relative; max-width: 1720px; }
 
 /******** font ********/
 .font120 { font-size: 120px !important; }
@@ -97,7 +97,6 @@ hr.title { height: 2px; }
 #footerWrap .copyright p { color: #FFF; font-size: 18px; font-weight: bold; text-align: center; }
 
 @media (max-width: 1280px) { 
-    h2.font64 { font-size: 32px !important; }
     .mo-hidden { display: none; }
     .pc-hidden { display: block; } 
 
@@ -113,6 +112,7 @@ hr.title { height: 2px; }
 
 
 @media (max-width: 1024px) {  
+    h2.font64 { font-size: 32px !important; }
 
     /******** font ********/
     .font120 { font-size: 60px !important; }
@@ -132,7 +132,7 @@ hr.title { height: 2px; }
     #footerWrap .footer-logo { width: 100px; height: 73px; }
     #footerWrap .footer-inner address { font-size: 14px; }
     #footerWrap .footer-inner .btn-wrap { max-width: 280px; }
-    #footerWrap .footer-inner .btn-wrap > a { width: 135px; margin-right: 10px; font-size: 12px; }
+    #footerWrap .footer-inner .btn-wrap > a { width: 135px; margin-right: 10px; font-size: 14px; }
     #footerWrap .copyright { height: 45px; line-height: 45px; }
     #footerWrap .copyright p { font-size: 12px; }
 }
