--- a/lib/css/default.css
+++ b/lib/css/default.css
@@ -3,7 +3,7 @@
 @import url("font.css");
 /*base*/
 * { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
-body{ width:100%; height:100%; text-align:left; font-size:16px; font-weight:400; font-family:"Noto Sans KR","Apple SD Gothic Neo", "맑은 고딕", "Malgun Gothic", sans-serif; color:#000; line-height:1.4; -webkit-overflow-scrolling:touch; letter-spacing: -0.03em; word-break: keep-all; }
+body{ width:100%; height:100%; text-align:left; font-size:16px; font-weight:400; font-family:"Pretendard","Apple SD Gothic Neo", "맑은 고딕", "Malgun Gothic", sans-serif; color:#000; line-height:1.4; -webkit-overflow-scrolling:touch; letter-spacing: -0.03em; word-break: keep-all; }
 *:focus { box-shadow:none; -webkit-box-shadow:none;}
 *:focus:not(:focus-visible) { outline: 0; }
 body,p,h1,h2,h3,h4,h5,h6,table,caption,form,fieldset,legend,span,div,th,td,address{ margin:0; padding:0; }
@@ -14,7 +14,7 @@ table{border-collapse:collapse; border-spacing:0; width:100%}
 fieldset{border:0}
 legend, caption{width:0; height:0; text-indent:-10000px; font-size:0px; line-height:0; position:absolute; left:-99999px; }
 textarea{border:2px solid #dbdbdc; padding:8px 10px !important; line-height:18px; resize:none; }
-input, textarea { vertical-align:middle; font-size:16px; color:#000; font-family:"Noto Sans KR","Apple SD Gothic Neo", "맑은 고딕", "Malgun Gothic", sans-serif; padding:0; margin:0; border: 0; background-color: transparent; }
+input, textarea { vertical-align:middle; font-size:16px; color:#000; font-family:"Pretendard","Apple SD Gothic Neo", "맑은 고딕", "Malgun Gothic", sans-serif; padding:0; margin:0; border: 0; background-color: transparent; }
 input[type="checkbox"] { width:12px; height:12px; margin-right:7px;}
 input[type="radio"] { width:13px; height:13px; border:none; }
 input[type="file"]{height:22px; color:#666; border:1px solid #d4d4d4; line-height:22px; vertical-align:middle; background:#fff}
