--- a/lib/css/font.css
+++ b/lib/css/font.css
@@ -7,6 +7,78 @@
         url(../font/BowlbyOne-Regular.ttf) format('truetype'),
         url(../font/BowlbyOne-Regular.svg#BowlbyOne-Regular) format('svg');
     font-weight: normal;
-    font-style: normal;
     font-display: swap;
 }
+
+@font-face {
+    font-family: 'Pretendard';
+    src: url('../font/Pretendard-SemiBold.eot');
+    src: url('../font/Pretendard-SemiBold.eot?#iefix') format('embedded-opentype'),
+        url('../font/Pretendard-SemiBold.woff2') format('woff2'),
+        url('../font/Pretendard-SemiBold.woff') format('woff'),
+        url('../font/Pretendard-SemiBold.ttf') format('truetype'),
+        url('../font/Pretendard-SemiBold.svg#Pretendard-SemiBold') format('svg');
+    font-weight: 600;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Pretendard';
+    src: url('../font/Pretendard-Bold.eot');
+    src: url('../font/Pretendard-Bold.eot?#iefix') format('embedded-opentype'),
+        url('../font/Pretendard-Bold.woff2') format('woff2'),
+        url('../font/Pretendard-Bold.woff') format('woff'),
+        url('../font/Pretendard-Bold.ttf') format('truetype'),
+        url('../font/Pretendard-Bold.svg#Pretendard-Bold') format('svg');
+    font-weight: 700;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Pretendard';
+    src: url('../font/Pretendard-Thin.eot');
+    src: url('../font/Pretendard-Thin.eot?#iefix') format('embedded-opentype'),
+        url('../font/Pretendard-Thin.woff2') format('woff2'),
+        url('../font/Pretendard-Thin.woff') format('woff'),
+        url('../font/Pretendard-Thin.ttf') format('truetype'),
+        url('../font/Pretendard-Thin.svg#Pretendard-Thin') format('svg');
+    font-weight: 100;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Pretendard';
+    src: url('../font/Pretendard-Light.eot');
+    src: url('../font/Pretendard-Light.eot?#iefix') format('embedded-opentype'),
+        url('../font/Pretendard-Light.woff2') format('woff2'),
+        url('../font/Pretendard-Light.woff') format('woff'),
+        url('../font/Pretendard-Light.ttf') format('truetype'),
+        url('../font/Pretendard-Light.svg#Pretendard-Light') format('svg');
+    font-weight: 300;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Pretendard';
+    src: url('../font/Pretendard-Medium.eot');
+    src: url('../font/Pretendard-Medium.eot?#iefix') format('embedded-opentype'),
+        url('../font/Pretendard-Medium.woff2') format('woff2'),
+        url('../font/Pretendard-Medium.woff') format('woff'),
+        url('../font/Pretendard-Medium.ttf') format('truetype'),
+        url('../font/Pretendard-Medium.svg#Pretendard-Medium') format('svg');
+    font-weight: 500;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Pretendard';
+    src: url('../font/Pretendard-Regular.eot');
+    src: url('../font/Pretendard-Regular.eot?#iefix') format('embedded-opentype'),
+        url('../font/Pretendard-Regular.woff2') format('woff2'),
+        url('../font/Pretendard-Regular.woff') format('woff'),
+        url('../font/Pretendard-Regular.ttf') format('truetype'),
+        url('../font/Pretendard-Regular.svg#Pretendard-Regular') format('svg');
+    font-weight: 400;
+    font-display: swap;
+}
+
