--- a/lib/css/layout.css
+++ b/lib/css/layout.css
@@ -14,9 +14,11 @@ h2 { font-size: 3.3vw; font-weight: normal; font-family: 'Bowlby One'; letter-sp
 
 /******** font ********/
 .font120 { font-size: 120px !important; }
-.font64 { font-size: 64px !important; }
+.font64 { font-size: 3.333vw !important; }
+.font56 { font-size: 2.917vw !important; }
 .font40 { font-size: 40px !important; }
-.font32 { font-size: 32px !important; }
+.font32 { font-size: 1.667vw !important; }
+/* .font24 { font-size: 1.25vw !important; } */
 .font24 { font-size: 24px !important; }
 .font18 { font-size: 18px !important; }
 .font16 { font-size: 16px !important; }
@@ -27,6 +29,7 @@ h2 { font-size: 3.3vw; font-weight: normal; font-family: 'Bowlby One'; letter-sp
 .light { font-weight:300 !important; }
 .normal { font-weight:400 !important; }
 .medium { font-weight:500 !important; }
+.semibold { font-weight:600 !important; }
 .bold { font-weight:700 !important; }
 .underline { text-decoration:underline; }
 .bowlbyone { font-family: 'Bowlby One'; letter-spacing: 0.02em; }
@@ -55,10 +58,11 @@ hr.title { height: 2px; }
 
 
 /******** headerWrap ********/
-#headerWrap { width: 100%; height: 100px; position: absolute; top: 0; left: 0; z-index: 1; }
+#headerWrap { width: 100%; height: 100px; position: absolute; top: 0; left: 0; z-index: 1; background-color: #FAF8F6; }
 #headerWrap .inner { max-width: 1194px; width: 100%; height: 100%; margin: 0 auto; display: flex; align-items: center; }
-#headerWrap .inner .logo { max-width: 151px; width: 100%; height: 71px; }
-#headerWrap .inner .logo img { width: 100%; }
+#headerWrap .inner .logo { max-width: 127px; width: 100%; height: 60px; }
+#headerWrap .inner .logo a { display: block; }
+#headerWrap .inner .logo a > img { width: 100%; }
 #headerWrap .inner nav { flex-grow:1; height: 100%; }
 #headerWrap .inner .gnb-wrap.pc::after { content: ""; display: block; clear: both; }
 #headerWrap .inner .gnb-wrap.pc > li { position: relative; max-width: 148px; width: 100%; height: 100%; line-height: 100px; float: left; }
@@ -79,6 +83,7 @@ hr.title { height: 2px; }
 #headerWrap.sub .gnb-wrap > li > a { color: #FF001E; }
 
 /******* footerWrap ********/
+#footerWrap { background-color: #FAF8F6; }
 #footerWrap .footer-inner { max-width: 476px; margin: 0 auto; }
 #footerWrap .footer-logo { width: 156px; height: 112px; margin: 0 auto; }
 #footerWrap .footer-logo > img { width: 100%; }
@@ -112,13 +117,13 @@ hr.title { height: 2px; }
 
 
 @media (max-width: 1024px) {  
-    h2.font64 { font-size: 32px !important; }
+    /* h2.font64 { font-size: 32px !important; } */
 
     /******** font ********/
     .font120 { font-size: 60px !important; }
-    .font64 { font-size: 32px !important; }
+    /* .font64 { font-size: 32px !important; } */
     .font40 { font-size: 28px !important; }
-    .font32 { font-size: 24px !important; }
+    /* .font32 { font-size: 24px !important; } */
     .font24 { font-size: 18px !important; }
     .font18 { font-size: 18px !important; }
     .font16 { font-size: 16px !important; }
