--- a/lib/css/layout.css
+++ b/lib/css/layout.css
@@ -17,7 +17,7 @@ h2 { font-size: 3.3vw; font-weight: normal; font-family: 'Bowlby One'; letter-sp
 .font64 { font-size: 3.333vw !important; }
 .font56 { font-size: 2.917vw !important; }
 .font40 { font-size: 40px !important; }
-.font32 { font-size: 1.667vw !important; }
+.font32 { font-size: 32px !important; }
 /* .font24 { font-size: 1.25vw !important; } */
 .font24 { font-size: 24px !important; }
 .font18 { font-size: 18px !important; }
@@ -99,7 +99,7 @@ hr.title { height: 2px; }
 #footerWrap .footer-inner .sns-wrap > li:last-child { margin-right: 0; }
 #footerWrap .footer-inner .sns-wrap > li > a > img { width: 100%; }
 #footerWrap .copyright { width: 100%; height: 60px; line-height: 60px; background-color: #FF001E; }
-#footerWrap .copyright p { color: #FFF; font-size: 18px; font-weight: bold; text-align: center; }
+#footerWrap .copyright p { color: #FFF; font-size: 18px; font-weight: bold; text-align: center; letter-spacing: 0.02rem; }
 
 @media (max-width: 1280px) { 
     .mo-hidden { display: none; }
@@ -123,7 +123,7 @@ hr.title { height: 2px; }
     .font120 { font-size: 60px !important; }
     /* .font64 { font-size: 32px !important; } */
     .font40 { font-size: 28px !important; }
-    /* .font32 { font-size: 24px !important; } */
+    .font32 { font-size: 24px !important; }
     .font24 { font-size: 18px !important; }
     .font18 { font-size: 18px !important; }
     .font16 { font-size: 16px !important; }
