--- a/lib/css/content.css
+++ b/lib/css/content.css
@@ -5,16 +5,14 @@
 #content1-1 .section-1 .full-page { position: relative; width: 100%; overflow: hidden; }
 #content1-1 .section-1 .full-page > div { position: relative; width: 50%; padding-bottom: 39.24%; float: left; }
 #content1-1 .section-1 .full-page.global-network > div { float: right; }
-#content1-1 .section-1 .inner-wrap .desc-wrap { position: absolute; top: 50%; transform: translateY(-50%); padding: 0 24px; }
+#content1-1 .section-1 .inner-wrap .desc-wrap { position: absolute; left: 8%; top: 50%; transform: translateY(-50%); padding: 0 24px; }
 #content1-1 .section-1 .inner-wrap .desc-wrap > h2 { margin-bottom: 24px; }
 #content1-1 .section-1 .brand-story .has-bg { background-image: url(../../image/page/bg_brand_story01.jpg); }
 #content1-1 .section-1 .global-network .has-bg { background-image: url(../../image/page/bg_brand_story02.jpg); }
-#content1-1 .section-1 .brand-story .desc-wrap { left: 80px; }
-#content1-1 .section-1 .global-network .desc-wrap { right: 80px; }
 
-#content1-1 .section-2 .our-mission .perpen-area { float: left; width: calc(33% - 34px); height: 677px; margin-right: 34px; background-image: url(../../image/page/bg_customer.jpg); background-repeat: no-repeat; background-position: bottom 60px center; background-size: auto 284px; }
+#content1-1 .section-2 .our-mission .perpen-area { float: left; width: calc(33% - 34px); height: 677px; margin-right: 34px; background-image: url(../../image/page/bg_customer.jpg); background-repeat: no-repeat; background-position: bottom 60px center; background-size: auto 240px; }
 #content1-1 .section-2 .our-mission .horiz-area { float: left; width: 67%; }
-#content1-1 .section-2 .our-mission .horiz-area > div { height: 322px; background-color: #FAF8F6; background-image: url(../../image/page/bg_partner.jpg); background-repeat: no-repeat; background-size: auto 233px; background-position: center right 102px ; padding-right: 280px; }
+#content1-1 .section-2 .our-mission .horiz-area > div { height: 322px; background-color: #FAF8F6; background-image: url(../../image/page/bg_partner.jpg); background-repeat: no-repeat; background-size: auto 200px; background-position: center right 102px ; padding-right: 280px; }
 #content1-1 .section-2 .our-mission .horiz-area > div:last-child { margin-top: 34px; background-image: url(../../image/page/bg_staff.jpg); background-position: center right 94px; }
 #content1-1 .section-2 .our-mission .inner { padding: 52px; height: 100%; }
 
@@ -24,7 +22,7 @@
 #content1-1 .section-3 ul li a .bg-wrap::after { content: ""; display: block; width: 100%; height: 100%; background-color: rgba(0,0,0,.5); }
 #content1-1 .section-3 ul li a > span { position: relative; z-index: 1; }
 #content1-1 .section-3 ul li a .desc-wrap { display: flex; align-items: center; justify-content: space-around; width: 100%; position: absolute; top: 50%; transform: translateY(-50%); }
-#content1-1 .section-3 ul li a .desc-wrap > span { margin: 0 10px; }
+#content1-1 .section-3 ul li a .desc-wrap > span { width: 410px; margin: 0 20px; }
 #content1-1 .section-3 ul li a .desc-wrap .brand-logo { display: block; max-width: 120px; width: 100%; height: auto; }
 #content1-1 .section-3 ul li a .desc-wrap .brand-logo > img { width: 100%; }
 #content1-1 .section-3 ul li a .desc-wrap > .txt-wrap > span { font-size: 32px; }
@@ -45,23 +43,26 @@
 @media (max-width:1280px){
     #contentsWrap { padding-top: 55px; }
 
-
-
-    
-}
-@media (max-width:1024px){
     /******** content1-1 ********/
     #content1-1 .section-3 ul li { height: 197px; }
     #content1-1 .section-3 ul li a .desc-wrap .brand-logo { max-width: 60px; }
     #content1-1 .section-3 ul li a .desc-wrap .txt-wrap > span { font-size: 18px; margin-bottom: 8px; }
     #content1-1 .section-3 ul li a .desc-wrap .txt-wrap > button { width: 18px; height: 18px; }
     #content1-1 .section-3 ul li a .desc-wrap .txt-wrap > button > img { width: 100%; }
+    #content1-1 .section-3 ul li a .desc-wrap > span { width: 230px; }
+
+
+
+    
+}
+@media (max-width:1024px){
+
     
 }
 @media (max-width: 991px) {
     /******** content1-1 ********/
     #content1-1 .section-1 .full-page { height: auto; }
-    #content1-1 .section-1 .full-page > div { width: 100%; height: auto; float: none; }
+    #content1-1 .section-1 .full-page > div { width: 100%; height: auto; float: none; padding-bottom: 0; }
     #content1-1 .section-1 .full-page > div.has-bg { height: 400px; }
     #content1-1 .section-1 .brand-story .has-bg { background-image: url(../../image/page/bg_brand_story01_mo.jpg); }
     #content1-1 .section-1 .full-page.global-network > div { float: none; }
