--- a/lib/css/layout.css
+++ b/lib/css/layout.css
@@ -4,7 +4,7 @@
 #wrap { position: relative; width:100%; min-width:320px; max-width: 100%; margin:0 auto; overflow:hidden; background-color: #fff; color: #000}
 #skipnavi li a {  display:block; font-size:16px; width:100%; position:absolute; top:-10000px; left:0; text-align:center; z-index:999999; line-height:1; letter-spacing:0 ; }
 #skipnavi li a:focus { position:absolute; top:0; left:0; font-weight:bold; color:#fff; background:#272727; padding:20px 0; line-height:1; }
-h2 { font-size: 3.3vw; font-weight: normal; font-family: 'Bowlby One'; letter-spacing: 0.02em; color: #FF001E; }
+h2 { font-size: 2.917vw; font-weight: normal; font-family: 'Bowlby One'; letter-spacing: 0.02em; color: #FF001E; }
 .mo-hidden { display: block; }
 .pc-hidden { display: none; }
 
@@ -66,7 +66,7 @@ hr.title { height: 2px; }
 #headerWrap .inner nav { flex-grow:1; height: 100%; }
 #headerWrap .inner .gnb-wrap.pc::after { content: ""; display: block; clear: both; }
 #headerWrap .inner .gnb-wrap.pc > li { position: relative; max-width: 148px; width: 100%; height: 100%; line-height: 100px; float: left; }
-#headerWrap .inner .gnb-wrap.pc > li > a { display: block; height: 100%; font-size: 18px; font-weight: bold; padding-left: 48px }
+#headerWrap .inner .gnb-wrap.pc > li > a { display: block; height: 100%; font-size: 20px; font-weight: bold; padding-left: 48px }
 #headerWrap .inner .gnb-wrap.pc > li > .sub-menu { display: none; position: absolute; background-color: #fff; border-radius: 12px; }
 #headerWrap .inner .gnb-wrap.pc > li > .sub-menu > li { width: 148px; height: 40px; line-height: 40px; }
 #headerWrap .inner .gnb-wrap.pc > li > .sub-menu > li > a { display: block; width: 100%; height: 100%; font-size: 14px; padding-left: 23px;}
@@ -102,6 +102,7 @@ hr.title { height: 2px; }
 #footerWrap .copyright p { color: #FFF; font-size: 18px; font-weight: bold; text-align: center; letter-spacing: 0.02rem; }
 
 @media (max-width: 1280px) { 
+    h2 { font-size: 32px; }
     .mo-hidden { display: none; }
     .pc-hidden { display: block; } 
 
@@ -113,15 +114,10 @@ hr.title { height: 2px; }
     #headerWrap .inner .mo > .menu.btn > span { display: block; width: 100%; height: 3px; background-color: #FF001E; margin-bottom: 4px; }
     #headerWrap .inner .mo > .menu.btn > span:last-child { margin-bottom: 0; }
     #headerWrap .inner .mo > .gnb-wrap.mo { display: none; }
-}
-
-
-@media (max-width: 1024px) {  
-    /* h2.font64 { font-size: 32px !important; } */
 
     /******** font ********/
     .font120 { font-size: 60px !important; }
-    /* .font64 { font-size: 32px !important; } */
+    .font56 { font-size: 32px !important; }
     .font40 { font-size: 28px !important; }
     .font32 { font-size: 24px !important; }
     .font24 { font-size: 18px !important; }
@@ -129,6 +125,11 @@ hr.title { height: 2px; }
     .font16 { font-size: 16px !important; }
     .font14 { font-size: 14px !important; }
     .font12 { font-size: 12px !important; }
+}
+
+
+@media (max-width: 1024px) {  
+
 }
 
 @media (max-width: 768px) {
