--- a/lib/css/content.css
+++ b/lib/css/content.css
@@ -36,6 +36,15 @@
 #content1-1 .section-3 ul li:nth-child(5) > .image-wrap { width: 180px; }
 
 /******** content1-2 ********/
+#content2-1 .visual-banner { padding-top: 120px; display: grid; grid-template-columns: 530px 360px 263px; grid-template-rows: 1fr 1fr; grid-gap: 20px; }
+#content2-1 .visual-banner .banner-item { background-repeat: no-repeat; background-size: cover; background-position: center; }
+#content2-1 .visual-banner .banner-item:nth-child(1) { background-image: url(../../image/page/bg_juicy_presso01.jpg); width: 530px; height: 740px; grid-row: 1/3; grid-column: 1/3; }
+#content2-1 .visual-banner .banner-item:nth-child(2) { background-image: url(../../image/page/bg_juicy_presso02.png); grid-row: 1/2; grid-column: 2/3; }
+#content2-1 .visual-banner .banner-item:nth-child(3) { background-image: url(../../image/page/bg_juicy_presso03.jpg); }
+#content2-1 .visual-banner .banner-item:nth-child(4) { background-image: url(../../image/page/bg_juicy_presso04.jpg); grid-row: 2/2; grid-column: 2/3; }
+#content2-1 .visual-banner .banner-item:nth-child(5) { background-image: url(../../image/page/bg_juicy_presso05.jpg); }
+
+#content2-1 .menu-wrap { padding-top: 184px; }
 
 @media (max-width:1280px){
     #contentsWrap { padding-top: 55px; }
