--- a/lib/css/layout.css
+++ b/lib/css/layout.css
@@ -58,7 +58,7 @@ hr.title { height: 2px; }
 
 
 /******** headerWrap ********/
-#headerWrap { width: 100%; height: 100px; position: absolute; top: 0; left: 0; z-index: 1; background-color: #FAF8F6; }
+#headerWrap { width: 100%; height: 100px; position: absolute; top: 0; left: 0; z-index: 1; background-color: #FFFFFF; }
 #headerWrap .inner { max-width: 1194px; width: 100%; height: 100%; margin: 0 auto; display: flex; align-items: center; }
 #headerWrap .inner .logo { max-width: 127px; width: 100%; height: 60px; }
 #headerWrap .inner .logo a { display: block; }
