--- a/lib/css/content.css
+++ b/lib/css/content.css
@@ -6,7 +6,7 @@
 #content1-1 .section-1 .full-page > div { position: relative; width: 50%; padding-bottom: 39.24%; float: left; }
 #content1-1 .section-1 .full-page.global-network > div { float: right; }
 #content1-1 .section-1 .inner-wrap .desc-wrap { position: absolute; left: 8%; top: 50%; transform: translateY(-50%); padding: 0 24px; }
-#content1-1 .section-1 .inner-wrap .desc-wrap > h2 { margin-bottom: 24px; }
+#content1-1 .section-1 .inner-wrap .desc-wrap > h2 { margin-bottom: 12px; }
 #content1-1 .section-1 .brand-story .has-bg { background-image: url(../../image/page/bg_brand_story01.jpg); }
 #content1-1 .section-1 .global-network .has-bg { background-image: url(../../image/page/bg_brand_story02.jpg); }
 
@@ -25,7 +25,6 @@
 #content1-1 .section-3 ul li a .desc-wrap > span { width: 410px; margin: 0 20px; }
 #content1-1 .section-3 ul li a .desc-wrap .brand-logo { display: block; max-width: 120px; width: 100%; height: auto; }
 #content1-1 .section-3 ul li a .desc-wrap .brand-logo > img { width: 100%; }
-#content1-1 .section-3 ul li a .desc-wrap > .txt-wrap > span { font-size: 32px; }
 #content1-1 .section-3 ul li a .desc-wrap > .txt-wrap button { display: block; margin-top: 16px; }
 #content1-1 .section-3 ul li:nth-child(1) a .bg-wrap { background-image: url(../../image/page/bg_juicy_presso.png); }
 #content1-1 .section-3 ul li:nth-child(2) a .bg-wrap { background-image: url(../../image/page/bg_gomango.jpg); }
@@ -36,15 +35,23 @@
 #content1-1 .section-3 ul li:nth-child(5) > .image-wrap { width: 180px; }
 
 /******** content1-2 ********/
-#content2-1 .visual-banner { padding-top: 120px; display: grid; grid-template-columns: 530px 360px 263px; grid-template-rows: 1fr 1fr; grid-gap: 20px; }
-#content2-1 .visual-banner .banner-item { background-repeat: no-repeat; background-size: cover; background-position: center; }
-#content2-1 .visual-banner .banner-item:nth-child(1) { background-image: url(../../image/page/bg_juicy_presso01.jpg); width: 530px; height: 740px; grid-row: 1/3; grid-column: 1/3; }
-#content2-1 .visual-banner .banner-item:nth-child(2) { background-image: url(../../image/page/bg_juicy_presso02.png); grid-row: 1/2; grid-column: 2/3; }
-#content2-1 .visual-banner .banner-item:nth-child(3) { background-image: url(../../image/page/bg_juicy_presso03.jpg); }
-#content2-1 .visual-banner .banner-item:nth-child(4) { background-image: url(../../image/page/bg_juicy_presso04.jpg); grid-row: 2/2; grid-column: 2/3; }
-#content2-1 .visual-banner .banner-item:nth-child(5) { background-image: url(../../image/page/bg_juicy_presso05.jpg); }
-
-#content2-1 .menu-wrap { padding-top: 184px; }
+.visual-banner { padding-top: 120px; display: grid; grid-gap: 18px; }
+.visual-banner .banner-item > img { width: 100%; height: 100%; object-fit: cover; } 
+.visual-banner .banner-item:nth-child(1) { grid-row: 1/3; grid-column: 1/3; }
+.visual-banner .banner-item:nth-child(2) { grid-row: 1/2; grid-column: 3/4; }
+.visual-banner .banner-item:nth-child(3) { grid-row: 1/2; grid-column: 4/4; }
+.visual-banner .banner-item:nth-child(4) { grid-row: 2/2; grid-column: 3/4; }
+.visual-banner .banner-item:nth-child(5) { grid-row: 2/2; grid-column: 4/4; }
+.menu-tab { display: flex; align-items: center; justify-content: space-around; }
+.menu-tab button { position: relative; font-size: 24px; font-weight: 700; color: #FF001E; opacity: .5; margin: 8px; }
+.menu-tab button::after { content: ""; display: block; width: 100%; height: 1px; background-color: #FF001E; position: absolute; }
+.menu-tab button.active { opacity: 1; }
+.menu-list { display: flex; align-items: center; }
+.menu-list > div { width: 25%; }
+.menu-list .menu-item > a { display: block; text-align: center; }
+.menu-list .menu-item > a > .menu-img { position: relative; display: block; }
+.menu-list .menu-item > a > .menu-img > img { position: relative; z-index: 1; }
+.menu-list .menu-item > a > .menu-info { display: block; margin-top: 36px; font-weight: 700; }
 
 @media (max-width:1280px){
     #contentsWrap { padding-top: 55px; }
@@ -52,7 +59,7 @@
     /******** content1-1 ********/
     #content1-1 .section-3 ul li { height: 197px; }
     #content1-1 .section-3 ul li a .desc-wrap .brand-logo { max-width: 60px; }
-    #content1-1 .section-3 ul li a .desc-wrap .txt-wrap > span { font-size: 18px; margin-bottom: 8px; }
+    #content1-1 .section-3 ul li a .desc-wrap .txt-wrap > span { margin-bottom: 8px; }
     #content1-1 .section-3 ul li a .desc-wrap .txt-wrap > button { width: 18px; height: 18px; }
     #content1-1 .section-3 ul li a .desc-wrap .txt-wrap > button > img { width: 100%; }
     #content1-1 .section-3 ul li a .desc-wrap > span { width: 230px; }
@@ -73,7 +80,6 @@
     #content1-1 .section-1 .brand-story .has-bg { background-image: url(../../image/page/bg_brand_story01_mo.jpg); }
     #content1-1 .section-1 .full-page.global-network > div { float: none; }
     #content1-1 .section-1 .inner-wrap .desc-wrap { position: static; transform: none; max-width: 384px; width: 100%; text-align: center; margin: 0 auto; padding: 80px 22px; }
-    #content1-1 .section-1 .inner-wrap .desc-wrap > h2 { margin-bottom: 17px; }
 
 }
 @media (max-width: 768px) {
@@ -83,10 +89,22 @@
     #content1-1 .section-2 .our-mission .horiz-area > div { width: 100%;  height: 560px; background-position: bottom 66px center; padding-right: 12px; }
     #content1-1 .section-2 .our-mission .horiz-area > div:last-child { background-position: bottom 82px center; }
     #content1-1 .section-2 .our-mission .inner { padding: 28px 12px 0 13px; }
+
+    /******** content2-1 ********/
+    #content2-1 .visual-banner .banner-item:nth-child(1) { grid-row: 1/2; grid-column: 1/3; }
+    #content2-1 .visual-banner .banner-item:nth-child(2) { grid-row: 2/4; grid-column: 1/2; }
+    #content2-1 .visual-banner .banner-item:nth-child(3) { grid-row: 2/8; grid-column: 2/3; }
+    #content2-1 .visual-banner .banner-item:nth-child(4) { grid-row: 4/11; grid-column: 1/2; }
+    #content2-1 .visual-banner .banner-item:nth-child(5) { grid-row: 8/11; grid-column: 2/3; }
+    #content2-1 .menu-tab { flex-wrap: wrap; }
+    #content2-1 .menu-tab button { font-size: 18px; }
 }
 
 @media (min-width: 768px){
     /******** content1-1 ********/
     #content1-1 .section-3 ul li a:hover .bg-wrap { transform: scale(1.1); }
+
+    /******** content2-1 ********/
+    .menu-list .menu-item > a:hover > .menu-img::after { content: ""; display: block; width: 224px; height: 224px; background-color: #FF001E; border-radius: 50%; opacity: .3; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); }
 }
 
