--- a/lib/css/layout.css
+++ b/lib/css/layout.css
@@ -4,7 +4,7 @@
 #wrap { position: relative; width:100%; min-width:320px; max-width: 100%; margin:0 auto; overflow:hidden; background-color: #fff; color: #000}
 #skipnavi li a {  display:block; font-size:16px; width:100%; position:absolute; top:-10000px; left:0; text-align:center; z-index:999999; line-height:1; letter-spacing:0 ; }
 #skipnavi li a:focus { position:absolute; top:0; left:0; font-weight:bold; color:#fff; background:#272727; padding:20px 0; line-height:1; }
-h2 { font-size: 2.917vw; font-weight: normal; font-family: 'Bowlby One'; letter-spacing: 0.02em; color: #FF001E; }
+h2 { font-size: 48px; font-weight: normal; font-family: 'Jalnan'; letter-spacing: 0.02em; color: #FF001E; }
 .mo-hidden { display: block; }
 .pc-hidden { display: none; }
 
@@ -14,12 +14,12 @@ h2 { font-size: 2.917vw; font-weight: normal; font-family: 'Bowlby One'; letter-
 
 /******** font ********/
 .font120 { font-size: 120px !important; }
-.font64 { font-size: 3.333vw !important; }
-.font56 { font-size: 2.917vw !important; }
+.font56 { font-size: 56px !important; }
+.font48 { font-size: 48px !important; }
 .font40 { font-size: 40px !important; }
 .font32 { font-size: 32px !important; }
-/* .font24 { font-size: 1.25vw !important; } */
 .font24 { font-size: 24px !important; }
+.font20 { font-size: 20px !important; }
 .font18 { font-size: 18px !important; }
 .font16 { font-size: 16px !important; }
 .font14 { font-size: 14px !important; }
@@ -118,9 +118,11 @@ hr.title { height: 2px; }
     /******** font ********/
     .font120 { font-size: 60px !important; }
     .font56 { font-size: 32px !important; }
+    .font48 { font-size: 32px !important; }
     .font40 { font-size: 28px !important; }
     .font32 { font-size: 24px !important; }
     .font24 { font-size: 18px !important; }
+    .font20 { font-size: 18px !important; }
     .font18 { font-size: 18px !important; }
     .font16 { font-size: 16px !important; }
     .font14 { font-size: 14px !important; }
