--- a/lib/css/layout.css
+++ b/lib/css/layout.css
@@ -62,7 +62,7 @@ hr.title { height: 2px; }
 
 /******** headerWrap ********/
 #headerWrap { width: 100%; height: 100px; position: absolute; top: 0; left: 0; z-index: 1; background-color: #FFFFFF; }
-#headerWrap .inner { max-width: 1194px; width: 100%; height: 100%; margin: 0 auto; display: flex; align-items: center; }
+#headerWrap .inner { max-width: 1194px; width: 100%; height: 100%; margin: 0 auto; display: flex; align-items: center; padding: 0 20px; }
 #headerWrap .inner .logo { max-width: 127px; width: 100%; height: 60px; }
 #headerWrap .inner .logo a { display: block; }
 #headerWrap .inner .logo a > img { width: 100%; }
@@ -106,20 +106,9 @@ hr.title { height: 2px; }
 
 @media (max-width: 1280px) { 
     h2 { font-size: 32px; }
-    .mo-hidden { display: none; }
-    .pc-hidden { display: block; } 
-
-    #headerWrap { height: 55px; }
-    #headerWrap .inner { padding: 0 20px; }
-    #headerWrap .inner .logo { max-width: 81px; height: 38px; }
-    #headerWrap .inner .mo { float: right; }
-    #headerWrap .inner .mo > .menu.btn { width: 22px; height: 17px; margin: 19px 0; }
-    #headerWrap .inner .mo > .menu.btn > span { display: block; width: 100%; height: 3px; background-color: #FF001E; margin-bottom: 4px; }
-    #headerWrap .inner .mo > .menu.btn > span:last-child { margin-bottom: 0; }
-    #headerWrap .inner .mo > .gnb-wrap.mo { display: none; }
-
+    
     .sub-title p { font-size: 32px; }
-
+    
     /******** font ********/
     .font120 { font-size: 60px !important; }
     .font56 { font-size: 32px !important; }
@@ -136,7 +125,19 @@ hr.title { height: 2px; }
 
 
 @media (max-width: 1024px) {  
+    .mo-hidden { display: none; }
+    .pc-hidden { display: block; } 
 
+    .sub-title { padding-top: 60px; }
+    
+    #headerWrap { height: 55px; }
+    #headerWrap .inner .logo { max-width: 81px; height: 38px; }
+    #headerWrap .inner .mo { float: right; }
+    #headerWrap .inner .mo > .menu.btn { width: 22px; height: 17px; margin: 19px 0; }
+    #headerWrap .inner .mo > .menu.btn > span { display: block; width: 100%; height: 3px; background-color: #FF001E; margin-bottom: 4px; }
+    #headerWrap .inner .mo > .menu.btn > span:last-child { margin-bottom: 0; }
+    #headerWrap .inner .mo > .gnb-wrap.mo { display: none; }
+    
 }
 
 @media (max-width: 768px) {
